--- a/API-LOOCA1/pom.xml
+++ b/API-LOOCA1/pom.xml
@@ -151,6 +151,11 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>1.9.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.2.jre11</version>
+        </dependency>
     </dependencies>
 
 </project>
