--- a/API-LOOCA1/pom.xml
+++ b/API-LOOCA1/pom.xml
@@ -26,7 +26,7 @@
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+
         <plugins>
 
             <plugin>
@@ -154,8 +154,10 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>12.4.2.jre11</version>
+            <version>12.5.0.jre11-preview</version>
         </dependency>
+
+
     </dependencies>
 
 </project>
