--- a/individual-gyu/api-looca-gyu/pom.xml
+++ b/individual-gyu/api-looca-gyu/pom.xml
@@ -89,6 +89,7 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -111,6 +112,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
@@ -173,6 +175,12 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>1.9.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.1.jre11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
